Home page designed and scrollbar fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
-    padding: 0 !important;
-    overflow-y: scroll !important;
+    overflow-y: scroll;
     scroll-behavior: smooth;
     background-color: #82c777;
 }
